// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneInput renders correctly - custom country code 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇺🇸
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +1
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - custom placeholder 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Mobile
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Mobile"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Your phone number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - disabled 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": true,
        }
      }
      editable={false}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          {
            "opacity": 0.5,
          },
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - empty state 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with error 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#E5484D",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
        ]
      }
    >
      This number is already registered.
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "#E5484D",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#DDDDDD",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#DDDDDD"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          {
            "color": "#DDDDDD",
          },
          {
            "color": "#E5484D",
          },
          undefined,
        ]
      }
      value="98765 43210"
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with hint text 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#878787",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
        ]
      }
    >
      We'll send you an OTP
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;

exports[`PhoneInput renders correctly - with value 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    >
      Phone Number
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#DDDDDD",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#DDDDDD"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel="Phone Number"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          {
            "color": "#DDDDDD",
          },
          false,
          undefined,
        ]
      }
      value="98765 43210"
    />
  </View>
</View>
`;

exports[`PhoneInput renders with empty label 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.2}
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 18.4,
            "letterSpacing": 0,
            "lineHeight": 27.599999999999998,
            "textAlign": "left",
          },
          {
            "color": "#A9A9A9",
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 12,
            "lineHeight": 20,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "transparent",
          "borderCurve": "continuous",
          "borderRadius": 12,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 18,
            "marginRight": 2,
          }
        }
      >
        🇮🇳
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
              "lineHeight": 32,
            },
            {
              "color": "#444444",
            },
          ]
        }
      >
        +91
      </Text>
      <Svg
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
      >
        <Path
          d="M4 6L8 10L12 6"
          stroke="#444444"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.6}
        />
      </Svg>
    </View>
    <TextInput
      accessibilityLabel=""
      accessibilityState={
        {
          "disabled": false,
        }
      }
      editable={true}
      keyboardType="phone-pad"
      maxLength={11}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Enter Number"
      placeholderTextColor="#444444"
      style={
        [
          {
            "color": "#444444",
            "flex": 1,
            "fontFamily": "PlusJakartaSans-Regular",
            "fontSize": 20,
            "height": 32,
            "includeFontPadding": false,
            "margin": 0,
            "padding": 0,
            "textAlignVertical": "center",
          },
          false,
          false,
          undefined,
        ]
      }
      value=""
    />
  </View>
</View>
`;
